fix z-index of header

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -7,7 +7,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 5;
+  z-index: 10;
   box-shadow: 5px 10px 5px 5px rgba(0, 0, 0, 0.3);
   padding-left: 30px;
   padding-right: 30px;
